# cs-grading-tools

./: .envrc  .gitignore  .lazy.lua  .pre-commit-config.yaml  CHANGELOG.md  README.md  flake.nix  noxfile.py  pyproject.toml
.github/workflows/: ci-checks.yml  docs.yml  lint-and-test.yml  release.yml  tag.yml  verify-pre-commit.yml
autograder/: Dockerfile  README.md  action.yml
autograder/source/: config.py  config.toml  pytest.ini  requirements.txt  run_autograder  run_tests.py  setup.sh  utilities.py
autograder/source/tests/: test_after_deadline.py  test_before_deadline.py  test_files.py  test_submission_errors.py
autograder/submission/: example-with-errors.py
docs/: conf.py  index.md
docs/apidocs/: index.rst
docs/apidocs/grading_tools/: grading_tools.check_util.md  grading_tools.feedback_utils.md  grading_tools.grading.md  grading_tools.md  grading_tools.rubric.md  grading_tools.run_tests.md  grading_tools.unit_test.md
docs/source/grading_tools/: README.md  philosophy.md  reference.md  tips.md  usage.md
examples/a1/: README.md  cheatsheet.css  check_util.py  evaluation.py  feedback_utils.py  generate_pdf.sh  grading.py  pdf.css  runner  zip_feedback.sh
examples/a2/: generate_feedback.py  run_feedback_generator.py  run_manualgrader.py  run_tests.py  turtle_diagram.py  turtle_projectile.py
examples/a3/: autogenerated_rubric.json  run_feedback_generator.py  run_manualgrader.py  run_tests.py
examples/a3/tests/: test_assignment3.py  test_helper.py
examples/a4/: autogenerated_rubric.json  rubric.json  run_feedback_generator.py  run_manualgrader.py  run_tests.py
examples/a4/tests/: conftest.py  oneline_airport_temperature.csv  test_temperatures.py
examples/a5/: manual_testing.py  rubric.md  test_in_rectangle.py
src/a1/: check_util.py  evaluation.py
src/a2/: check_util.py  feedback_utils.py  generate_feedback.py  grading.py
src/a3/: feedback_utils.py  generate_feedback.py  grading.py  pdf.css  prepare_submissions  rubric.json  run_autograder  run_feedback_generator.py  run_localgrader  run_manualgrader.py  run_tests.py  setup.sh  zip_feedback
src/a3/tests/: test_assignment3.py  test_helper.py
src/a4/: autogenerated_rubric.json  check_util.py  csv_temperature_indices.py  feedback_utils.py  grading.py  montreal_extremes.py  montreal_rain_snow.py  run_feedback_generator.py  run_localgrader  run_manualgrader.py  run_tests.py  test_temperatures.csv  test_temperatures.py
src/a4/Solutions_and_Testing/: modify_temperature_file.py  temperatures.py  test_temperatures.py
src/a5/: test_cross_line.py  test_in_rectangle.py
src/grading_tools/: README.md  check_util.py  feedback_utils.py  grading.py  replace_whitespace  run_tests.py  unit_test.py
src/jac_cs_grading_tools/: check_util.py  feedback_utils.py  grading.py  prepare_submissions  pytest_util.py  rubric.py  run_localgrader  run_tests.py  unit_test.py
tests/: conftest.py  test_check_util.py
tests/fixtures/: tmp_file.py
tests/unit/: test_check_util.py  test_feedback_utils.py  test_grading.py  test_pytest_util.py  test_rubric.py  test_run_tests.py  test_unit_test.py
utils/: prepare_submissions  run_localgrader  zip_feedback
utils/gradescope/: fzf.py  scrape_gradescope.py
