[project]
name = "jac-cs-grading-tools"
version = "0.1.0a0"
description = "Tools for managing assignment grading in JAC CS."
readme = "README.md"
authors = [
    { name = "Sandy Bultena", email = "pallyloco@gmail.com" },
    { name = "Ian Clement", email = "Ian.Celement@johnabbott.qc.ca" },
    { name = "Youmna Badawy", email = "Youmna.Badawy@johnabbott.qc.ca" },
    { name = "Michael Haaf", email = "michael.haaf@johnabbott.qc.ca" },
]
requires-python = ">=3.10"
dependencies = [
    "pylint>=3.3.9",
]

[dependency-groups]
documentation = [
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc2>=0.5.0",
]
dev = [
    "coverage>=7.13.5",
    "gradescope-utils>=0.5.0",
    "mdformat-myst>=0.3.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-json-report>=1.5.0",
    "ruff>=0.15.10",
    "bump-my-version>=1.3.0",
]
pdf_report = [
    "weasyprint>=68.1",
]
course = [
    "matplotlib>=3.10.8",
    "pyqt6>=6.11.0",
]
nox = [
    "nox-uv>=0.7.1",
]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
weasyprint = { git = "https://github.com/Kozea/WeasyPrint" }

[tool.bumpversion.parts.pre_l]
values = ["dev", "rc", "final"]
optional_value = "final"

[tool.bumpversion]
current_version = "0.1.0a0"
# parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
# serialize = ["{major}.{minor}.{patch}"]
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -                             # dash separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?:0|[1-9]\\d*)               # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_l}{distance_to_latest_tag}",
    "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
allow_shell_hooks = true

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
