[project]
name = "jac-cs-grading-tools"
version = "0.1.1"
description = "Tools for managing assignment grading in JAC CS."
readme = "README.md"
authors = [
    { name = "Sandy Bultena", email = "pallyloco@gmail.com" },
    { name = "Ian Clement", email = "Ian.Celement@johnabbott.qc.ca" },
    { name = "Youmna Badawy", email = "Youmna.Badawy@johnabbott.qc.ca" },
    { name = "Michael Haaf", email = "michael.haaf@johnabbott.qc.ca" },
]
requires-python = ">=3.10"
dependencies = [
    "pylint>=3.3.9",
]

[dependency-groups]
documentation = [
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc2>=0.5.0",
]
dev = [
    "commitizen>=4.16.2",
    "coverage>=7.13.5",
    "gradescope-utils>=0.5.0",
    "mdformat-myst>=0.3.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-json-report>=1.5.0",
    "ruff>=0.15.10",
]
pdf_report = [
    "weasyprint>=68.1",
]
course = [
    "matplotlib>=3.10.8",
    "pyqt6>=6.11.0",
]
nox = [
    "nox-uv>=0.7.1",
]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
weasyprint = { git = "https://github.com/Kozea/WeasyPrint" }


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
